2013-05-10 Miguel de Dios <miguel.dedios@artica.es>

	* operation/snmpconsole/snmp_browser.php: fixed the url to pure.
	
	Fixes: #2212

2013-05-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Added to Server performance 
	box in tactical view total events statistic for bug #2042

2013-05-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Set a default value to 
	enable_metaconsole_netflow config token to avoid metaconsole
	ugly notice for bug #2210

2013-05-06 Miguel de Dios <miguel.dedios@artica.es>

	* operation/agentes/group_view.php, godmode/groups/group_list.php,
	include/functions_groups.php: added pagination to groups views.
	
	PENDING TASK: #346
	
	* include/functions_component_groups.php: cleaned source code style.
	
	* include/functions.php: added function "is_array_empty" for
	deepers arrays.

2013-05-06  Sergio Martin <sergio.martin@artica.es>

	* include/help/en/help_module_interval_factor.php
	include/help/es/help_module_interval_factor.php
	godmode/agentes/module_manager_editor_common.php: Change the
	control of interval module when is data module from extended 
	from time to normal box with a different help tip explaining
	that this control is not setted in seconds.

	* operation/integria_incidents/incident.php
	images/book_edit.png
	general/pandora_help.php
	godmode/setup/setup_general.php: Aesthetic fixes

2013-05-04  Junichi Satoh  <junichi@rworks.jp>

	* mobile/include/ui.class.php: Added charset.

2013-05-04  Junichi Satoh  <junichi@rworks.jp>

	* mobile/index.php, mobile/include/user.class.php,
	include/functions.php: Fixed i18n failure in the mobile console.

2013-05-03  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_graph.php: Fixed warnings.

2013-05-01 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/agent_manager.php: improved the source code style.
	
	* godmode/agentes/configurar_agente.php: fixed the agents address
	with white spaces in the both sides.
	